2005-05-31  Zack Weinberg  <zack@codesourcery.com>

	* ld-scripts/align.exp: Mark align1 XFAIL on PECOFF targets.
	* ld-scripts/data.exp: Mark data UNSUPPORTED on a.out targets.
	* ld-scripts/provide.exp, ld-scripts/size.exp: Mark all tests
	UNSUPPORTED on a.out targets.  Tidy.

2005-05-27  Mark Mitchell  <mark@codesourcery.com>

	* config/default.exp (CC): Use find_gcc.
	(CFLAGS): Define, if no definition has been provided by the user.
	(CXX): Likewise.
	(CXXFLAGS): Likewise.

2005-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-mmix/bpo-6.d: Updated.
	* ld-mmix/bpo-19.d: Likewise.

2005-05-22  Richard Henderson  <rth@redhat.com>

	* ld-elfweak/dsow.dsym: Adjust for non-zero ST_OTHER.
	* ld-elfweak/weak.dsym: Likewise.

	* ld-selective/selective.exp: Don't test alpha.

2005-05-20  Daniel Jacobowitz  <dan@codesourcery.com>

	* ld-powerpc/sdalib.s, ld-powerpc/sdadyn.s, ld-powerpc/sdadyn.d: New
	files.
	* ld-powerpc/powerpc.exp: Run the new test.

2005-05-20  Bob Wilson  <bob.wilson@acm.org>

	* ld-undefined/undefined.exp: Revert xfail for xtensa-*-*.

2005-05-17  H.J. Lu  <hongjiu.lu@intel.com>

	PR 797
	* empty-aligned.d: New file.
	* empty-aligned.exp: Likewise.
	* empty-aligned.s: Likewise.
	* empty-aligned.t: Likewise.

2005-05-11  Bob Wilson  <bob.wilson@acm.org>

	* ld-undefined/undefined.exp: xfail xtensa-*-*.

2005-05-07  Alan Modra  <amodra@bigpond.net.au>

	* ld-powerpc/tlsexe32.d: Update for changed got layout.
	* ld-powerpc/tlsexe32.g: Likewise.
	* ld-powerpc/tlsexe32.r: Likewise.
	* ld-powerpc/tlsso32.d: Likewise.
	* ld-powerpc/tlsso32.g: Likewise.
	* ld-powerpc/tlsso32.r: Likewise.

2005-05-06  Nick Clifton  <nickc@redhat.com>

	Update the address and phone number of the FSF organization in
	the GPL notices in the following files:
	* config/default.exp, ld-alpha/alpha.exp, ld-arm/arm-elf.exp,
	ld-auto-import/auto-import.exp, ld-bootstrap/bootstrap.exp,
	ld-cdtest/cdtest.exp, ld-checks/checks.exp, ld-cris/cris.exp,